--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -24,4 +24,5 @@
   border: 0.12em solid var(--general-border-color);
   border-radius: 0.5em;
   font-size: 1.5em;
+  user-select: none;
 }
